Fixed overflow, audio in mobile, and scrolling to works on mobile

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,6 +2,7 @@
   height: 50%;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
 }
 
 .about-title-wrapper {
