--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,5 +1,6 @@
 .home-row-wrapper {
   height: 100%;
+  max-width: 100%;
 }
 
 .home-title-wrapper {
